--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     width: 100px;
     height: 100px;
     border: 1px solid red;
+    transition: all 1s;
 }
+
 .ex-2-square {
     width: 100px;
     height: 100px;
