--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@
     width: 60px;
     height: 60px;
     background: red;
+    transition: all 0.2s;
+
 }
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
