--- a/esercitazione.css
+++ b/esercitazione.css
@@ -1,19 +1,27 @@
+
+/*Esercizio 1*/
 .ex-1-square:hover{
     background-color: red;
 }
 
+
+/*Esercizio 2*/
 .ex-2-square:active {
     width: 100%;
 }
 
+
+/*Esercizio 3*/
 .ex-3-square:hover{
     border-radius: 50px;
 }
 
+/*Esercizio 4*/
 .ex-4-square:hover{
   background: none;
 }
 
+/*Esercizio 5*/
 .ex-5-square:hover{
     margin: 0;
     width: 100px;
@@ -24,4 +32,27 @@
     margin: 20px;
     width: 20px;
     height: 20px;
+}
+
+
+/*Esercizio 6*/
+.ex-6-img{
+    transition: all 0.5s;
+}
+
+.ex-6-img:hover{
+    filter: grayscale(1);
+}
+
+/*Esercizio 7 non so come fare non avendo un immagine */
+
+
+/*Esercizio 8*/
+.ex-8-img{
+    transition: all 0.8s;
+}
+
+.ex-8-img:hover{
+    filter: blur(1px) grayscale(1);
+    border-radius: 30px;
 }
