--- a/esercitazione.css
+++ b/esercitazione.css
@@ -69,6 +69,37 @@
     border-radius: 30px;
     width: 300px;
 }
+ 
+
+/*Esercizio 10*/
+
+.ex-10-icon{
+    -webkit-animation-name: spin ;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: spin ;
+    -moz-animation-duration: 1ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -ms-animation-name: spin ;
+    -ms-animation-duration: 1ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+    -o-transition: rotate(3600deg);
+}
 
 
-
+@keyframes spin {
+    
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+    
+    
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+  
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+    
+}
