--- a/esercitazione.css
+++ b/esercitazione.css
@@ -103,3 +103,38 @@
     to {transform:rotate(360deg);}
     
 }
+
+
+
+/*Esercizio 11*/
+
+.ex-11-icon:hover{
+    -webkit-animation-name: reverse ;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: reverse ;
+    -moz-animation-duration: 2ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -ms-animation-name: reverse ;
+    -ms-animation-duration: 2ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+    -o-transition: rotate(270deg);
+}
+
+
+@keyframes reverse {
+    
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(270deg); }
+    
+    
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(270deg); }
+  
+    from {transform:rotate(0deg);}
+    to {transform:rotate(270deg);}
+    
+}
