--- a/esercitazione.css
+++ b/esercitazione.css
@@ -161,3 +161,126 @@
     left: 60%;
 }
 
+
+/*Esercizio 13*/
+
+.ex-13-button:hover  .ex-13-bottom-white{
+    animation-name: around ;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+   
+}
+
+
+@keyframes around {
+    0%{ bottom: -10px;
+        right: 0%;
+        
+    }
+
+    10%{ bottom: -10px;
+        right: 10%;
+        
+    }
+
+    20%{ bottom: -10px;
+        right: 20%;
+        
+    }
+
+    30%{ bottom: -10px;
+        right: 30%;
+        
+    }
+
+    40%{ bottom: -10px;
+        right: 40%;
+        
+    }
+
+    50%{ bottom: -10px;
+        right: 50%;
+        
+    }
+
+    
+    60%{ bottom: -10px;
+        right: 60%;
+        
+    }
+    70%{ bottom: -10px;
+        right: 70%;
+        
+    }
+  
+
+}
+
+
+.ex-13-button:hover  .ex-13-top-white{
+    animation-name: around-top ;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+   
+}
+
+
+@keyframes around-top {
+    0%{ 
+        top: -10px;
+        left: 0%;
+        
+    }
+
+    10%{ 
+        top: -10px;
+        left: 10%;
+        
+    }
+
+    20%{ 
+        top: -10px;
+        left: 20%;
+        
+    }
+
+    30%{ 
+        top: -10px;
+        left: 30%;
+        
+    }
+
+    40%{
+        top: -10px;
+        left: 40%;
+        
+    }
+
+    50%{ 
+        top: -10px;
+        left: 50%;
+        
+    }
+
+    
+    60%{ 
+        top: -10px;
+        left: 60%;
+        
+    }
+    70%{ 
+        top: -10px;
+        left: 70%;
+        
+    }
+  
+
+}
+
+
+
+
+
+
